Move registry information onto the class itself.

--- a/packages/evo-objects/example.ipynb
+++ b/packages/evo-objects/example.ipynb
@@ -10,7 +10,7 @@
     "from evo.notebooks import ServiceManagerWidget\n",
     "\n",
     "manager = await ServiceManagerWidget.with_auth_code(\n",
-    "    client_id=\"client-id\",\n",
+    "    client_id=\"client_id\",\n",
     ").login()"
    ]
   },
@@ -25,13 +25,10 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "from evo.objects.helpers.typed.pointset import PointSet\n",
+    "from evo.objects.helpers.typed.pointset import PointSet, PointSetData\n",
     "\n",
-    "point_set = await PointSet.create(\n",
-    "    environment=manager.get_environment(),\n",
-    "    connector=manager.get_connector(),\n",
-    "    cache=manager.cache,\n",
-    "    name=f\"My Point Set - {uuid.uuid4()}\",\n",
+    "point_set_data = PointSetData(\n",
+    "    name=f\"My Point Set Data - {uuid.uuid4()}\",\n",
     "    data=pd.DataFrame(\n",
     "        {\n",
     "            \"x\": [1.0, 2.0, 3.0],\n",
@@ -43,6 +40,12 @@
     "        }\n",
     "    ),\n",
     "    coordinate_reference_system=\"EPSG:4326\",\n",
+    ")\n",
+    "point_set = await PointSet.create(\n",
+    "    environment=manager.get_environment(),\n",
+    "    connector=manager.get_connector(),\n",
+    "    cache=manager.cache,\n",
+    "    data=point_set_data,\n",
     ")\n",
     "\n",
     "df = await point_set.as_dataframe()\n",
@@ -74,12 +77,87 @@
     "\n",
     "from evo_schemas.elements.serialiser import GSONEncoder\n",
     "\n",
-    "print(point_set.metadata)\n",
+    "from evo.objects.helpers.geoscience_object import BaseObject\n",
     "\n",
-    "print(json.dumps(point_set.as_dict(), indent=2, cls=GSONEncoder))\n",
+    "o = await BaseObject.from_reference(\n",
+    "    connector=manager.get_connector(),\n",
+    "    cache=manager.cache,\n",
+    "    reference=point_set.metadata.url,\n",
+    ")\n",
+    "print(type(o))\n",
     "\n",
-    "df = await point_set.as_dataframe()\n",
+    "print(o.metadata)\n",
+    "print(json.dumps(o.as_dict(), indent=2, cls=GSONEncoder))\n",
+    "\n",
+    "df = await o.as_dataframe()\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "point_set_data = PointSetData(\n",
+    "    name=f\"My Point Set Data - {uuid.uuid4()}\",\n",
+    "    data=pd.DataFrame(\n",
+    "        {\n",
+    "            \"x\": [11.0, 2.0, 3.0],\n",
+    "            \"y\": [4.0, 5.0, 6.0],\n",
+    "            \"z\": [7.0, 8.0, 9.0],\n",
+    "            \"a\": [10.0, 11.0, 12.0],\n",
+    "            \"b\": [False, True, False],\n",
+    "            \"c\": [\"point1\", \"point2\", \"point3\"],\n",
+    "        }\n",
+    "    ),\n",
+    "    coordinate_reference_system=\"EPSG:4326\",\n",
+    ")\n",
+    "new_point_set = await PointSet.replace(\n",
+    "    environment=manager.get_environment(),\n",
+    "    connector=manager.get_connector(),\n",
+    "    cache=manager.cache,\n",
+    "    reference=point_set.metadata.url,\n",
+    "    data=point_set_data,\n",
+    ")\n",
+    "df = await new_point_set.as_dataframe()\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from evo.objects.helpers.typed.grid import Regular3DGrid, Regular3DGridData\n",
+    "from evo.objects.helpers.types import Point3, Size3d, Size3i\n",
+    "\n",
+    "grid_data = Regular3DGridData(\n",
+    "    name=f\"My Regular 3D Grid Data - {uuid.uuid4()}\",\n",
+    "    origin=Point3(0.0, 0.0, 0.0),\n",
+    "    size=Size3i(3, 3, 3),\n",
+    "    cell_size=Size3d(1.0, 1.0, 1.0),\n",
+    "    cell_data=pd.DataFrame(\n",
+    "        {\n",
+    "            \"a\": [10.0, 11.0, 12.0],\n",
+    "            \"b\": [False, True, False],\n",
+    "            \"c\": [\"point1\", \"point2\", \"point3\"],\n",
+    "        }\n",
+    "    ),\n",
+    "    coordinate_reference_system=\"EPSG:4326\",\n",
+    ")\n",
+    "grid = await Regular3DGrid.create(\n",
+    "    environment=manager.get_environment(),\n",
+    "    connector=manager.get_connector(),\n",
+    "    cache=manager.cache,\n",
+    "    data=grid_data,\n",
+    ")\n",
+    "print(grid.as_dict())\n",
+    "grid_df = await grid.cells.as_dataframe()\n",
+    "grid_df"
    ]
   }
  ],
