Introduce EvoContext, that encapsulates all contextural information required to call Evo APIs.

--- a/packages/evo-objects/example.ipynb
+++ b/packages/evo-objects/example.ipynb
@@ -21,6 +21,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from evo.objects.helpers import EvoContext\n",
+    "\n",
+    "evo_context = EvoContext.from_environment(\n",
+    "    connector=manager.get_connector(),\n",
+    "    environment=manager.get_environment(),\n",
+    "    cache=manager.cache,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import uuid\n",
     "\n",
     "import pandas as pd\n",
@@ -42,9 +58,7 @@
     "    coordinate_reference_system=\"EPSG:4326\",\n",
     ")\n",
     "point_set = await PointSet.create(\n",
-    "    environment=manager.get_environment(),\n",
-    "    connector=manager.get_connector(),\n",
-    "    cache=manager.cache,\n",
+    "    evo_context=evo_context,\n",
     "    data=point_set_data,\n",
     ")\n",
     "\n",
@@ -55,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,8 +94,7 @@
     "from evo.objects.helpers.geoscience_object import BaseObject\n",
     "\n",
     "o = await BaseObject.from_reference(\n",
-    "    connector=manager.get_connector(),\n",
-    "    cache=manager.cache,\n",
+    "    evo_context=evo_context,\n",
     "    reference=point_set.metadata.url,\n",
     ")\n",
     "print(type(o))\n",
@@ -96,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,9 +128,7 @@
     "    coordinate_reference_system=\"EPSG:4326\",\n",
     ")\n",
     "new_point_set = await PointSet.replace(\n",
-    "    environment=manager.get_environment(),\n",
-    "    connector=manager.get_connector(),\n",
-    "    cache=manager.cache,\n",
+    "    evo_context=evo_context,\n",
     "    reference=point_set.metadata.url,\n",
     "    data=point_set_data,\n",
     ")\n",
@@ -128,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,9 +161,7 @@
     "    coordinate_reference_system=\"EPSG:4326\",\n",
     ")\n",
     "grid = await Regular3DGrid.create(\n",
-    "    environment=manager.get_environment(),\n",
-    "    connector=manager.get_connector(),\n",
-    "    cache=manager.cache,\n",
+    "    evo_context=evo_context,\n",
     "    data=grid_data,\n",
     ")\n",
     "print(grid.as_dict())\n",
