Update DownloadedObject.update to be in a landable state.

--- a/packages/evo-objects/example.ipynb
+++ b/packages/evo-objects/example.ipynb
@@ -10,7 +10,10 @@
     "from evo.notebooks import ServiceManagerWidget\n",
     "\n",
     "manager = await ServiceManagerWidget.with_auth_code(\n",
-    "    client_id=\"client_id\",\n",
+    "    client_id=\"core-compute-tasks-notebooks\",\n",
+    "    base_uri=\"https://qa-ims.bentley.com\",\n",
+    "    discovery_url=\"https://int-discover.test.api.seequent.com\",\n",
+    "    cache_location=\"notebook-data\",\n",
     ").login()"
    ]
   },
@@ -140,6 +143,17 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Should raise an ObjectModifiedError\n",
+    "await o.update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
