Fix left over reference to loader

--- a/packages/evo-objects/example.ipynb
+++ b/packages/evo-objects/example.ipynb
@@ -10,10 +10,7 @@
     "from evo.notebooks import ServiceManagerWidget\n",
     "\n",
     "manager = await ServiceManagerWidget.with_auth_code(\n",
-    "    client_id=\"core-compute-tasks-notebooks\",\n",
-    "    base_uri=\"https://qa-ims.bentley.com\",\n",
-    "    discovery_url=\"https://int-discover.test.api.seequent.com\",\n",
-    "    cache_location=\"notebook-data\",\n",
+    "    client_id=\"your_client_id_here\",\n",
     ").login()"
    ]
   },
@@ -76,6 +73,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for attribute in point_set.attributes:\n",
+    "    if attribute.name == \"a\":\n",
+    "        print(attribute.key)\n",
+    "        print(await attribute.as_dataframe())\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "point_set.description = \"This is my point set.\"\n",
     "df.loc[0, \"a\"] = 99.9\n",
     "df[\"d\"] = [100, 200, 300]\n",
@@ -86,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,18 +153,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Should raise an ObjectModifiedError\n",
-    "await o.update()"
+    "from evo.objects.exceptions import ObjectModifiedError\n",
+    "\n",
+    "# Should raise ObjectModifiedError because 'o' is stale\n",
+    "try:\n",
+    "    await o.update()\n",
+    "except ObjectModifiedError as e:\n",
+    "    print(f\"ObjectModifiedError: {e}\")\n",
+    "else:\n",
+    "    print(\"No ObjectModifiedError raised\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +196,7 @@
     "    evo_context=evo_context,\n",
     "    data=grid_data,\n",
     ")\n",
-    "print(grid.as_dict())\n",
+    "print(attr.name for attr in grid.cells.attributes)\n",
     "grid_df = await grid.cells.as_dataframe()\n",
     "grid_df"
    ]
