Remove JMESPath usage

--- a/packages/evo-objects/example.ipynb
+++ b/packages/evo-objects/example.ipynb
@@ -196,7 +196,7 @@
     "    evo_context=evo_context,\n",
     "    data=grid_data,\n",
     ")\n",
-    "print(attr.name for attr in grid.cells.attributes)\n",
+    "print([attr.name for attr in grid.cells.attributes])\n",
     "grid_df = await grid.cells.as_dataframe()\n",
     "grid_df"
    ]
