--- a/packages/evo-compute/docs/examples/kriging_multiple.ipynb
+++ b/packages/evo-compute/docs/examples/kriging_multiple.ipynb
@@ -1,8 +1,9 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "f1bb81260e4fcb13",
+   "metadata": {},
    "source": [
     "# Running Multiple Kriging Tasks\n",
     "\n",
@@ -14,18 +15,22 @@
     "- Batch processing multiple attributes\n",
     "\n",
     "All kriging results are stored as attributes in a single Block Model."
-   ],
-   "id": "f1bb81260e4fcb13"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Authentication",
-   "id": "c68578af8b121069"
+   "id": "c68578af8b121069",
+   "metadata": {},
+   "source": [
+    "## Authentication"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3e9693701283b1ba",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from evo.notebooks import ServiceManagerWidget\n",
     "\n",
@@ -35,24 +40,24 @@
     "    discovery_url=\"https://int-discover.test.api.seequent.com\",\n",
     "    cache_location=\"./notebook-data\",\n",
     ").login()"
-   ],
-   "id": "3e9693701283b1ba",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "dd262ab43c70e63b",
+   "metadata": {},
    "source": [
     "## Setup for Local Development\n",
     "\n",
     "> **Note:** If the imports below fail, you may need to add the local source packages to your Python path. Run the cell below first."
-   ],
-   "id": "dd262ab43c70e63b"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8f4d3f39d998bd1",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Setup for local development source - run this cell FIRST if you get import errors\n",
     "# You may need to restart your kernel after running this cell for the first time\n",
@@ -74,24 +79,24 @@
     "        sys.path.insert(0, path)\n",
     "\n",
     "print(\"Local source paths configured - restart kernel if you still see import errors\")"
-   ],
-   "id": "8f4d3f39d998bd1",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "b25b7b48eec5f70f",
+   "metadata": {},
    "source": [
     "## Load Source PointSet and Variogram\n",
     "\n",
     "Load the source pointset and variogram using `object_from_uuid`."
-   ],
-   "id": "b25b7b48eec5f70f"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1c666e7471d14b0a",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from evo.objects.typed import object_from_uuid, object_from_path\n",
     "\n",
@@ -102,25 +107,25 @@
     "\n",
     "# Display the pointset (pretty-printed in Jupyter)\n",
     "source_pointset"
-   ],
-   "id": "1c666e7471d14b0a",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d8e2e2fb7c6ec087",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# View the pointset attributes\n",
     "source_pointset.attributes"
-   ],
-   "id": "d8e2e2fb7c6ec087",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e70985d9e33fa441",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Load the variogram\n",
     "variogram = await object_from_uuid(manager, \"72cd9b83-90f4-4cb0-9691-95728e3f9cbb\")\n",
@@ -130,44 +135,44 @@
     "\n",
     "# Display the variogram (pretty-printed in Jupyter)\n",
     "variogram"
-   ],
-   "id": "e70985d9e33fa441",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7b589dc133409522",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(f\"Source: {source_pointset.name}\")\n",
     "print(f\"Variogram: {variogram.name}\")"
-   ],
-   "id": "7b589dc133409522",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "execution_count": null,
    "id": "d04be723a2adf6c7",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": []
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "1425723496cdba48",
+   "metadata": {},
    "source": [
     "## Create Target Block Model\n",
     "\n",
     "Create a single Block Model to hold all scenario results as attributes.\n",
     "The Block Model Service manages concurrent attribute creation."
-   ],
-   "id": "1425723496cdba48"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e95305cd19655e37",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import uuid\n",
     "from evo.objects.typed import BlockModel, RegularBlockModelData, Point3, Size3i, Size3d\n",
@@ -192,47 +197,47 @@
     "print(f\"Created Block Model: {block_model.name}\")\n",
     "print(f\"Block Model UUID: {block_model.block_model_uuid}\")\n",
     "print(f\"Bounding Box: {block_model.bounding_box}\")"
-   ],
-   "id": "e95305cd19655e37",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "34225355701a677",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Use existing block model instead\n",
     "# block_model = await object_from_uuid(manager, \"9e19c1e7-3a52-452a-978f-73dc9440dbbe\")"
-   ],
-   "id": "34225355701a677",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "27d0fe8cc7686446",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Display the block model (pretty-printed in Jupyter)\n",
     "block_model"
-   ],
-   "id": "27d0fe8cc7686446",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "3bfdcd9f6c86e8ce",
+   "metadata": {},
    "source": [
     "## Define Kriging Scenarios\n",
     "\n",
     "Create multiple parameter sets varying the `max_samples` parameter to study its effect.\n",
     "All scenarios target the same Block Model, creating different attributes."
-   ],
-   "id": "3bfdcd9f6c86e8ce"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "72569385b009697c",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from evo.compute.tasks import SearchNeighborhood\n",
     "from evo.compute.tasks.kriging import KrigingParameters\n",
@@ -244,14 +249,14 @@
     "\n",
     "# Create search ellipsoid by scaling the variogram ellipsoid by 2x\n",
     "search_ellipsoid = var_ell.scaled(2.0)"
-   ],
-   "id": "72569385b009697c",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ff6c5478046ccd4a",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Visualize variogram and search ellipsoids with pointset data\n",
     "import plotly.graph_objects as go\n",
@@ -281,14 +286,14 @@
     "    showlegend=True\n",
     ")\n",
     "fig.show()\n"
-   ],
-   "id": "ff6c5478046ccd4a",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "71640ae83be3758d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Base source configuration\n",
     "source = source_pointset.attributes[\"Ag_ppm Values\"]\n",
@@ -307,25 +312,25 @@
     "    print(f\"Prepared scenario with max_samples={max_samples}\")\n",
     "\n",
     "print(f\"\\nCreated {len(parameter_sets)} parameter sets\")"
-   ],
-   "id": "71640ae83be3758d",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "5a6502b5b49049c2",
+   "metadata": {},
    "source": [
     "## Run Multiple Kriging Tasks\n",
     "\n",
     "Execute all scenarios concurrently using `run` with a list of parameters.\n",
     "Progress is aggregated across all tasks."
-   ],
-   "id": "5a6502b5b49049c2"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a5781d9044d8069b",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from evo.compute.tasks import run\n",
     "\n",
@@ -335,61 +340,61 @@
     "results = await run(manager, parameter_sets)\n",
     "\n",
     "print(f\"\\nAll {len(results)} scenarios completed!\")"
-   ],
-   "id": "a5781d9044d8069b",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "38b0d98f5cd815de",
+   "metadata": {},
    "source": [
     "## View Block Model Attributes\n",
     "\n",
     "Display the block model attributes to see all the newly created scenario columns.\n",
     "\n",
     "> **Note:** The block model object needs to be refreshed to see the newly added attributes."
-   ],
-   "id": "38b0d98f5cd815de"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "dde21c45b5ef53d5",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Refresh the block model to see the new attributes added by kriging\n",
     "block_model = await block_model.refresh()\n",
     "\n",
     "# Pretty-print the block model to see its current state\n",
     "block_model"
-   ],
-   "id": "dde21c45b5ef53d5",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "418abecd39537fd3",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# View just the attributes (pretty-printed table in Jupyter)\n",
     "block_model.attributes"
-   ],
-   "id": "418abecd39537fd3",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "a1567820ce6fdf67",
+   "metadata": {},
    "source": [
     "## Query Results from Block Model\n",
     "\n",
     "Get all scenario results from the Block Model."
-   ],
-   "id": "a1567820ce6fdf67"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "20fbbf6c5b646226",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Query the Block Model for all scenario columns using to_dataframe()\n",
     "scenario_columns = [f\"Samples={ms}\" for ms in max_samples_values]\n",
@@ -399,76 +404,78 @@
     "\n",
     "print(f\"Retrieved {len(df)} blocks with {len(scenario_columns)} scenario columns\")\n",
     "df.head(10)"
-   ],
-   "id": "20fbbf6c5b646226",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Display Results",
-   "id": "b01ed9906eaab55d"
+   "id": "b01ed9906eaab55d",
+   "metadata": {},
+   "source": [
+    "## Display Results"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "21a90c684f360be8",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Pretty-print the Block Model with all scenarios (includes Portal/Viewer links)\n",
     "block_model"
-   ],
-   "id": "21a90c684f360be8",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4739679470231813",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Show individual job result messages\n",
     "for i, (job_result, max_samples) in enumerate(zip(results, max_samples_values)):\n",
     "    print(f\"Scenario {i+1}: max_samples={max_samples} - {job_result.message}\")"
-   ],
-   "id": "4739679470231813",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "53ac19b403009d17",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Display first result (pretty-printed)\n",
     "results[0]"
-   ],
-   "id": "53ac19b403009d17",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "d7ca52080afdb6de",
+   "metadata": {},
    "source": [
     "## Analyze Results\n",
     "\n",
     "Compare the kriging results across different max_samples values."
-   ],
-   "id": "d7ca52080afdb6de"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ac4853d0f5643ebf",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Show statistics for each scenario\n",
     "print(\"Statistics by max_samples:\")\n",
     "print(df[scenario_columns].describe())"
-   ],
-   "id": "ac4853d0f5643ebf",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ab75608f2bd61045",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Optional: Visualize the differences using plotly\n",
     "try:\n",
@@ -486,14 +493,12 @@
     "    fig.show()\n",
     "except ImportError:\n",
     "    print(\"Install plotly for visualization: pip install plotly\")"
-   ],
-   "id": "ab75608f2bd61045",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "c11f12ca59f50c5b",
+   "metadata": {},
    "source": [
     "## Create a Report on the Block Model\n",
     "\n",
@@ -502,23 +507,25 @@
     "Reports require:\n",
     "1. Columns to have units defined\n",
     "2. At least one category column for grouping results"
-   ],
-   "id": "c11f12ca59f50c5b"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "e1675aeee74d1cfd",
+   "metadata": {},
    "source": [
     "### Add a Domain Column\n",
     "\n",
     "First, let's add a category column for grouping. We'll create simple geological domains\n",
     "by slicing the block model into three zones based on elevation (z-coordinate)."
-   ],
-   "id": "e1675aeee74d1cfd"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "29a3c95b9c8aa840",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Get block model data\n",
     "df = await block_model.to_dataframe()\n",
@@ -546,37 +553,37 @@
     "# Check domain distribution\n",
     "print(\"\\nDomain distribution:\")\n",
     "print(df[\"domain\"].value_counts())"
-   ],
-   "id": "29a3c95b9c8aa840",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "faa2d93ec100e5dc",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Refresh to see the new attribute\n",
     "block_model = await block_model.refresh()\n",
     "block_model.attributes"
-   ],
-   "id": "faa2d93ec100e5dc",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "a454211e237cf67d",
+   "metadata": {},
    "source": [
     "### Set Units on Kriged Attributes\n",
     "\n",
     "Reports require columns to have units defined. The kriged columns may not have units set,\n",
     "so we need to set them before creating a report."
-   ],
-   "id": "a454211e237cf67d"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8d64902b98de95db",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from evo.blockmodels import Units\n",
     "\n",
@@ -591,14 +598,12 @@
     "\n",
     "# View updated attributes\n",
     "block_model.attributes"
-   ],
-   "id": "8d64902b98de95db",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "e08c241a674a9459",
+   "metadata": {},
    "source": [
     "### Create and Run the Report\n",
     "\n",
@@ -608,14 +613,16 @@
     "- `Aggregation` - Enum: `MASS_AVERAGE` (for grades), `SUM` (for metal content)\n",
     "- `Units` - Constants for output units (e.g., `Units.GRAMS_PER_TONNE`)\n",
     "- `MassUnits` - Constants for mass output (e.g., `MassUnits.TONNES`)"
-   ],
-   "id": "e08c241a674a9459"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f2ad2b7ba64ead4d",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "from evo.blockmodels.typed import (\n",
+    "from evo.blockmodels import (\n",
     "    Aggregation,\n",
     "    MassUnits,\n",
     "    ReportSpecificationData,\n",
@@ -651,66 +658,63 @@
     "# Create the report\n",
     "report = await block_model.create_report(report_data)\n",
     "print(f\"Created report: {report.name}\")"
-   ],
-   "id": "f2ad2b7ba64ead4d",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a8b3a597064adda",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Pretty-print the report (shows BlockSync link)\n",
     "report"
-   ],
-   "id": "a8b3a597064adda",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "995315cad71915d6",
+   "metadata": {},
    "source": [
     "### View Report Results\n",
     "\n",
     "Get the report results (waits if report is still running)."
-   ],
-   "id": "995315cad71915d6"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "162da59dfb8a686b",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Get the latest report result\n",
     "result = await report.refresh()\n",
     "\n",
     "# Pretty-print the result (displays table in Jupyter)\n",
     "result"
-   ],
-   "id": "162da59dfb8a686b",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "1386c6851c234f68",
+   "metadata": {},
    "source": [
     "### Open Report in BlockSync\n",
     "\n",
     "The report object provides a direct link to view and interact with the report in BlockSync."
-   ],
-   "id": "1386c6851c234f68"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2e966212540c7634",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Get the BlockSync URL\n",
     "print(f\"View report in BlockSync: {report.blocksync_url}\")\n"
-   ],
-   "id": "2e966212540c7634",
-   "outputs": [],
-   "execution_count": null
+   ]
   }
  ],
  "metadata": {
