--- a/packages/evo-compute/docs/examples/kriging_multiple.ipynb
+++ b/packages/evo-compute/docs/examples/kriging_multiple.ipynb
@@ -622,7 +622,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evo.blockmodels import (\n",
+    "from evo.blockmodels.typed import (\n",
     "    Aggregation,\n",
     "    MassUnits,\n",
     "    ReportSpecificationData,\n",
