Added compute extension to run preview version of krigging via Evo Compute.

--- a/code-samples/geoscience-objects/running-kriging-compute/running-kriging-compute.ipynb
+++ b/code-samples/geoscience-objects/running-kriging-compute/running-kriging-compute.ipynb
@@ -1,8 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "# Running Kriging Compute\n",
     "\n",
@@ -23,8 +23,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## 1. Authentication\n",
     "\n",
@@ -32,10 +32,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "from evo.notebooks import ServiceManagerWidget\n",
     "\n",
@@ -51,18 +51,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Load the widgets extension for rich HTML display\n",
     "%load_ext evo.widgets"
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## 2. Load and Create PointSet from Drill Hole Data\n",
     "\n",
@@ -73,10 +73,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -85,62 +85,81 @@
     "df = pd.read_csv(input_file)\n",
     "\n",
     "print(f\"Loaded {len(df)} sample points from {df['Hole ID'].nunique()} downholes\")\n",
+    "\n",
+    "# Select only the columns we need and rename coordinates\n",
+    "df = df[[\"X\", \"Y\", \"Z\", \"CU_pct\"]].rename(columns={\"X\": \"x\", \"Y\": \"y\", \"Z\": \"z\"})\n",
+    "\n",
+    "# Remove rows with null values - compute tasks require non-null values\n",
+    "original_count = len(df)\n",
+    "df = df.dropna().reset_index(drop=True)\n",
+    "removed_count = original_count - len(df)\n",
+    "if removed_count > 0:\n",
+    "    print(f\"\\nRemoved {removed_count} rows with null values\")\n",
+    "print(f\"Remaining: {len(df)} sample points\")\n",
+    "\n",
+    "# Verify no nulls remain\n",
+    "assert df.isna().sum().sum() == 0, \"DataFrame still contains null values!\"\n",
+    "\n",
     "print(\"\\nSpatial extent:\")\n",
-    "print(f\"  X: {df['X'].min():.1f} to {df['X'].max():.1f} ({df['X'].max() - df['X'].min():.1f}m)\")\n",
-    "print(f\"  Y: {df['Y'].min():.1f} to {df['Y'].max():.1f} ({df['Y'].max() - df['Y'].min():.1f}m)\")\n",
-    "print(f\"  Z: {df['Z'].min():.1f} to {df['Z'].max():.1f} ({df['Z'].max() - df['Z'].min():.1f}m)\")\n",
+    "print(f\"  X: {df['x'].min():.1f} to {df['x'].max():.1f} ({df['x'].max() - df['x'].min():.1f}m)\")\n",
+    "print(f\"  Y: {df['y'].min():.1f} to {df['y'].max():.1f} ({df['y'].max() - df['y'].min():.1f}m)\")\n",
+    "print(f\"  Z: {df['z'].min():.1f} to {df['z'].max():.1f} ({df['z'].max() - df['z'].min():.1f}m)\")\n",
     "print(\"\\nCopper (CU_pct) statistics:\")\n",
     "print(f\"  Mean: {df['CU_pct'].mean():.3f}%, Variance: {df['CU_pct'].var():.3f}\")\n",
     "df.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "from evo.objects.typed import EpsgCode, PointSet, PointSetData\n",
     "\n",
-    "# Prepare the DataFrame with required column names (lowercase x, y, z)\n",
-    "locations_df = df.rename(columns={\"X\": \"x\", \"Y\": \"y\", \"Z\": \"z\"})\n",
+    "# Create the pointset with coordinates only first\n",
+    "coords_df = df[[\"x\", \"y\", \"z\", \"CU_pct\"]].copy()\n",
+    "print(f\"Points to upload: {len(coords_df)}\")\n",
     "\n",
-    "# Create the pointset data\n",
     "pointset_data = PointSetData(\n",
-    "    name=\"WP Drill Hole Assays\",\n",
-    "    description=\"Copper and gold assay data from 55 downholes\",\n",
-    "    locations=locations_df,\n",
+    "    name=\"WP Drill Hole Assays 12\",\n",
+    "    description=\"Copper assay data from 55 downholes\",\n",
+    "    locations=coords_df,\n",
     "    coordinate_reference_system=EpsgCode(32650),  # UTM Zone 50N\n",
     ")\n",
     "\n",
     "# Create the pointset in Evo\n",
     "pointset = await PointSet.create(manager, pointset_data)\n",
-    "print(f\"Created pointset with {pointset.num_points} points\")"
+    "print(f\"Created pointset with {pointset.num_points} points\")\n",
+    "\n",
+    "# Add CU_pct attribute separately\n",
+    "# await pointset.locations.attributes.set_attributes(df[[\"CU_pct\"]])\n",
+    "# print(f\"Added CU_pct attribute\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Display the pointset with rich HTML formatting\n",
     "pointset"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# View available attributes\n",
     "pointset.attributes"
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## 3. Create a Variogram Model\n",
     "\n",
@@ -167,10 +186,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "from evo.objects.typed import (\n",
     "    Ellipsoid,\n",
@@ -233,27 +252,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Display the variogram with rich HTML formatting\n",
     "variogram"
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### Inspecting Variogram Properties"
-   ]
+   "cell_type": "markdown",
+   "source": "### Inspecting Variogram Properties"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "print(f\"Variogram: {variogram.name}\")\n",
     "print(f\"Sill: {variogram.sill}\")\n",
@@ -275,8 +292,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## 4. Visualize Variogram Curves\n",
     "\n",
@@ -284,10 +301,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Get variogram curves for the three principal directions\n",
     "major, semi_major, minor = variogram.get_principal_directions()\n",
@@ -299,10 +316,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "import plotly.graph_objects as go\n",
     "\n",
@@ -365,8 +382,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## 5. Working with Ellipsoids\n",
     "\n",
@@ -376,10 +393,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Get the ellipsoid from the variogram (uses structure with largest volume by default)\n",
     "var_ellipsoid = variogram.get_ellipsoid()\n",
@@ -396,8 +413,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## 6. Visualize PointSet and Variogram Ellipsoid Together\n",
     "\n",
@@ -408,10 +425,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Get pointset data for visualization\n",
     "points_df = await pointset.to_dataframe()\n",
@@ -426,10 +443,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Generate surface mesh points for visualization\n",
     "vx, vy, vz = var_ellipsoid.surface_points(center=center, n_points=25)\n",
@@ -512,8 +529,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "## 7. View Objects in Evo\n",
     "\n",
@@ -521,10 +538,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "from evo.widgets import get_viewer_url_for_objects\n",
     "\n",
@@ -534,8 +551,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "---\n",
     "\n",
@@ -545,128 +562,149 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
-    "from evo.blockmodels import Point3, RegularBlockModel, RegularBlockModelData, Size3d, Size3i, Units\n",
+    "from evo.blockmodels import Units\n",
+    "from evo.objects.typed import BlockModel, RegularBlockModelData, Point3, Size3d, Size3i\n",
     "\n",
     "# Define block model covering the drill hole extent\n",
     "bm_data = RegularBlockModelData(\n",
-    "    name=\"CU Kriging Estimate\",\n",
+    "    name=\"CU Kriging Estimate 2\",\n",
     "    description=\"Block model with kriged copper grades\",\n",
     "    origin=Point3(x=444750, y=492850, z=2350),\n",
     "    n_blocks=Size3i(nx=50, ny=75, nz=45),  # 50x75x45 blocks\n",
     "    block_size=Size3d(dx=20.0, dy=20.0, dz=20.0),  # 20m blocks\n",
-    "    coordinate_reference_system=\"EPSG:32650\",\n",
+    "    crs=\"EPSG:32650\",\n",
     "    size_unit_id=Units.METRES,\n",
     ")\n",
     "\n",
-    "block_model = await RegularBlockModel.create(manager, bm_data)\n",
+    "block_model = await BlockModel.create_regular(manager, bm_data)\n",
     "print(f\"Created Block Model: {block_model.name}\")\n",
-    "print(f\"Block Model ID: {block_model.id}\")"
+    "print(f\"Block Model UUID: {block_model.block_model_uuid}\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Display the block model metadata\n",
-    "block_model.version"
+    "block_model"
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "## WIP. Define Kriging Parameters\n",
+    "## 9. Define Kriging Parameters\n",
     "\n",
     "Configure the kriging search neighborhood and estimation parameters."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
-    "# from evo.compute.tasks import SearchNeighborhood\n",
-    "# from evo.compute.tasks.kriging import KrigingParameters\n",
-    "#\n",
-    "# # Use the search ellipsoid we created earlier (2x variogram range)\n",
-    "# params = KrigingParameters(\n",
-    "#     source=pointset.attributes[\"CU_pct\"],  # Source attribute\n",
-    "#     target=block_model.attributes[f\"CU_samples_{max_samples}\"]\n",
-    "#     variogram=variogram,\n",
-    "#     search=SearchNeighborhood(\n",
-    "#         ellipsoid=search_ellipsoid,\n",
-    "#         max_samples=16,  # Maximum samples per estimate\n",
-    "#         min_samples=4,   # Minimum samples required\n",
-    "#     ),\n",
-    "# )\n",
-    "#\n",
-    "# print(f\"Kriging source: CU_pct from pointset\")\n",
-    "# print(f\"Search ellipsoid: major={search_ellipsoid.ranges.major}m\")"
+    "from evo.compute.tasks import SearchNeighborhood\n",
+    "from evo.compute.tasks.kriging import KrigingParameters\n",
+    "\n",
+    "# Use the search ellipsoid we created earlier (2x variogram range)\n",
+    "params = KrigingParameters(\n",
+    "    source=pointset.attributes[\"CU_pct\"],  # Source attribute\n",
+    "    target=block_model.attributes[\"CU_estimate\"],  # Target attribute on block model\n",
+    "    variogram=variogram,\n",
+    "    search=SearchNeighborhood(\n",
+    "        ellipsoid=search_ellipsoid,\n",
+    "        max_samples=16,  # Maximum samples per estimate\n",
+    "        min_samples=4,   # Minimum samples required\n",
+    "    ),\n",
+    ")\n",
+    "\n",
+    "print(f\"Kriging source: CU_pct from pointset\")\n",
+    "print(f\"Search ellipsoid: major={search_ellipsoid.ranges.major}m\")"
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "## WIP. Run Kriging Task\n",
+    "## 10. Run Kriging Task\n",
     "\n",
     "Submit and run the kriging task using Evo Compute."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
-    "# from evo.compute.tasks import run\n",
-    "#\n",
-    "# # Submit kriging task (progress feedback is shown by default)\n",
-    "# print(\"Submitting kriging task...\")\n",
-    "# results = await run(manager, [params])\n",
-    "#\n",
-    "# print(f\"Kriging complete!\")\n",
-    "# print(f\"Result: {results[0].status}\")"
+    "from evo.compute.tasks import run\n",
+    "\n",
+    "# Submit kriging task (progress feedback is shown by default)\n",
+    "print(\"Submitting kriging task...\")\n",
+    "result = await run(manager, params)\n",
+    "\n",
+    "print(f\"Kriging complete!\")\n",
+    "print(f\"Result: {result.message}\")"
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
-    "## WIP. View Kriging Results\n",
+    "# Display the kriging result (pretty-printed in Jupyter)\n",
+    "result"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 11. View Kriging Results\n",
     "\n",
     "Refresh the block model and view the estimated grades."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "# Refresh block model to see new attributes\n",
-    "await block_model.refresh()\n",
+    "block_model = await block_model.refresh()\n",
     "\n",
-    "# Display the block model version (shows updated columns)\n",
-    "block_model.version"
+    "# Display the block model (pretty-printed in Jupyter)\n",
+    "block_model"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# View the block model attributes\n",
+    "block_model.attributes"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# Get the kriged values as a DataFrame\n",
-    "results_df = block_model.cell_data\n",
+    "results_df = await block_model.to_dataframe(columns=[\"CU_estimate\"])\n",
     "\n",
     "print(f\"Estimated {len(results_df)} blocks\")\n",
     "print(\"\\nStatistics for CU_estimate:\")\n",
@@ -674,40 +712,72 @@
    ]
   },
   {
-   "cell_type": "markdown",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "## WIP. Running Multiple Kriging Scenarios\n",
+    "## 12. Running Multiple Kriging Scenarios\n",
     "\n",
     "Run multiple kriging tasks concurrently to compare different parameters."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
-    "# max_samples_values = [5, 10, 15, 20]\n",
-    "#\n",
-    "# # Create parameter sets for each scenario\n",
-    "# parameter_sets = []\n",
-    "# for max_samples in max_samples_values:\n",
-    "#     params = KrigingParameters(\n",
-    "#         source=pointset.attributes[\"CU_pct\"],\n",
-    "#         target=block_model.attributes[f\"CU_samples_{max_samples}\"],\n",
-    "#         variogram=variogram,\n",
-    "#         search=SearchNeighborhood(\n",
-    "#             ellipsoid=search_ellipsoid,\n",
-    "#             max_samples=max_samples,\n",
-    "#         ),\n",
-    "#     )\n",
-    "#     parameter_sets.append(params)\n",
-    "#\n",
-    "# # Run all scenarios in parallel\n",
-    "# print(f\"Submitting {len(parameter_sets)} kriging tasks...\")\n",
-    "# results = await run(manager, parameter_sets)\n",
-    "# print(f\"All {len(results)} scenarios completed!\")\n"
+    "max_samples_values = [5, 10, 15, 20]\n",
+    "\n",
+    "# Create parameter sets for each scenario\n",
+    "parameter_sets = []\n",
+    "for max_samples in max_samples_values:\n",
+    "    params = KrigingParameters(\n",
+    "        source=pointset.attributes[\"CU_pct\"],\n",
+    "        target=block_model.attributes[f\"CU_samples_{max_samples}\"],\n",
+    "        variogram=variogram,\n",
+    "        search=SearchNeighborhood(\n",
+    "            ellipsoid=search_ellipsoid,\n",
+    "            max_samples=max_samples,\n",
+    "        ),\n",
+    "    )\n",
+    "    parameter_sets.append(params)\n",
+    "    print(f\"Prepared scenario with max_samples={max_samples}\")\n",
+    "\n",
+    "print(f\"\\nCreated {len(parameter_sets)} parameter sets\")"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Run all scenarios in parallel\n",
+    "print(f\"Submitting {len(parameter_sets)} kriging tasks...\")\n",
+    "results = await run(manager, parameter_sets)\n",
+    "\n",
+    "print(f\"\\nAll {len(results)} scenarios completed!\")"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Display the results (pretty-printed in Jupyter)\n",
+    "results"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Refresh and view block model with all new attributes\n",
+    "block_model = await block_model.refresh()\n",
+    "block_model\n"
    ]
   }
  ],
