Linting and removed outputs.

--- a/code-samples/geoscience-objects/running-kriging-compute/running-kriging-compute.ipynb
+++ b/code-samples/geoscience-objects/running-kriging-compute/running-kriging-compute.ipynb
@@ -568,7 +568,7 @@
    "execution_count": null,
    "source": [
     "from evo.blockmodels import Units\n",
-    "from evo.objects.typed import BlockModel, RegularBlockModelData, Point3, Size3d, Size3i\n",
+    "from evo.objects.typed import BlockModel, Point3, RegularBlockModelData, Size3d, Size3i\n",
     "\n",
     "# Define block model covering the drill hole extent\n",
     "bm_data = RegularBlockModelData(\n",
@@ -622,11 +622,11 @@
     "    search=SearchNeighborhood(\n",
     "        ellipsoid=search_ellipsoid,\n",
     "        max_samples=16,  # Maximum samples per estimate\n",
-    "        min_samples=4,   # Minimum samples required\n",
+    "        min_samples=4,  # Minimum samples required\n",
     "    ),\n",
     ")\n",
     "\n",
-    "print(f\"Kriging source: CU_pct from pointset\")\n",
+    "print(\"Kriging source: CU_pct from pointset\")\n",
     "print(f\"Search ellipsoid: major={search_ellipsoid.ranges.major}m\")"
    ]
   },
@@ -651,7 +651,7 @@
     "print(\"Submitting kriging task...\")\n",
     "result = await run(manager, params)\n",
     "\n",
-    "print(f\"Kriging complete!\")\n",
+    "print(\"Kriging complete!\")\n",
     "print(f\"Result: {result.message}\")"
    ]
   },
@@ -777,7 +777,7 @@
    "source": [
     "# Refresh and view block model with all new attributes\n",
     "block_model = await block_model.refresh()\n",
-    "block_model\n"
+    "block_model"
    ]
   }
  ],
