Linting and removed outputs.

--- a/code-samples/geoscience-objects/running-kriging-compute/running-kriging-compute.ipynb
+++ b/code-samples/geoscience-objects/running-kriging-compute/running-kriging-compute.ipynb
@@ -568,7 +568,7 @@
    "metadata": {},
    "source": [
     "from evo.blockmodels import Units\n",
-    "from evo.objects.typed import BlockModel, RegularBlockModelData, Point3, Size3d, Size3i\n",
+    "from evo.objects.typed import BlockModel, Point3, RegularBlockModelData, Size3d, Size3i\n",
     "\n",
     "# Define block model covering the drill hole extent\n",
     "bm_data = RegularBlockModelData(\n",
@@ -622,11 +622,11 @@
     "    search=SearchNeighborhood(\n",
     "        ellipsoid=search_ellipsoid,\n",
     "        max_samples=16,  # Maximum samples per estimate\n",
-    "        min_samples=4,   # Minimum samples required\n",
+    "        min_samples=4,  # Minimum samples required\n",
     "    ),\n",
     ")\n",
     "\n",
-    "print(f\"Kriging source: CU_pct from pointset\")\n",
+    "print(\"Kriging source: CU_pct from pointset\")\n",
     "print(f\"Search ellipsoid: major={search_ellipsoid.ranges.major}m\")"
    ],
    "outputs": [],
@@ -642,8 +642,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "metadata": {},
    "source": [
     "from evo.compute.tasks import run\n",
     "\n",
@@ -651,15 +651,15 @@
     "print(\"Submitting kriging task...\")\n",
     "result = await run(manager, params)\n",
     "\n",
-    "print(f\"Kriging complete!\")\n",
+    "print(\"Kriging complete!\")\n",
     "print(f\"Result: {result.message}\")"
    ],
    "outputs": [],
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "metadata": {},
    "source": [
     "# Display the kriging result (pretty-printed in Jupyter)\n",
     "result"
@@ -677,8 +677,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "metadata": {},
    "source": [
     "# Refresh block model to see new attributes\n",
     "block_model = await block_model.refresh()\n",
@@ -690,8 +690,8 @@
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "metadata": {},
    "source": [
     "# View the block model attributes\n",
     "block_model.attributes"
@@ -723,8 +723,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "metadata": {},
    "source": [
     "max_samples_values = [5, 10, 15, 20]\n",
     "\n",
@@ -749,8 +749,8 @@
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "metadata": {},
    "source": [
     "# Run all scenarios in parallel\n",
     "print(f\"Submitting {len(parameter_sets)} kriging tasks...\")\n",
@@ -762,8 +762,8 @@
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "metadata": {},
    "source": [
     "# Display the results (pretty-printed in Jupyter)\n",
     "results"
@@ -772,12 +772,12 @@
    "execution_count": null
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "metadata": {},
    "source": [
     "# Refresh and view block model with all new attributes\n",
     "block_model = await block_model.refresh()\n",
-    "block_model\n"
+    "block_model"
    ],
    "outputs": [],
    "execution_count": null
