Added filtered kriging execution.

--- a/packages/evo-compute/docs/examples/kriging_multiple.ipynb
+++ b/packages/evo-compute/docs/examples/kriging_multiple.ipynb
@@ -656,23 +656,64 @@
    "execution_count": null
   },
   {
-   "cell_type": "markdown",
-   "id": "1386c6851c234f68",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "### Open Report in BlockSync\n",
+    "### Filter kriging results on a category column\n",
     "\n",
-    "The report object provides a direct link to view and interact with the report in BlockSync."
-   ]
+    "Krigging can be run with a filter on a category column, which allows only for a specific area to be updated rather than the entire block model.\n"
+   ],
+   "id": "a6cce11f165de478"
   },
   {
-   "cell_type": "code",
-   "id": "2e966212540c7634",
    "metadata": {},
+   "cell_type": "code",
    "source": [
-    "# Get the BlockSync URL\n",
-    "print(f\"View report in BlockSync: {report.blocksync_url}\")"
+    "from evo.compute.tasks import RegionFilter\n",
+    "\n",
+    "# Base source configuration\n",
+    "source = source_pointset.attributes[\"Ag_ppm Values\"]\n",
+    "\n",
+    "# Create parameter sets for each scenario, all targeting the same Block Model\n",
+    "# Note: method defaults to ordinary kriging, so we don't need to specify it\n",
+    "parameter_sets = []\n",
+    "for max_samples in max_samples_values:\n",
+    "    params = KrigingParameters(\n",
+    "        source=source,\n",
+    "        target=block_model.attributes[f\"Samples={max_samples}\"],\n",
+    "        variogram=variogram,\n",
+    "        search=SearchNeighborhood(ellipsoid=search_ellipsoid, max_samples=max_samples),\n",
+    "        target_region_filter=RegionFilter(\n",
+    "            attribute=block_model.attributes[\"domain\"],\n",
+    "            names=[\"LMS1\"],  # Filter by category name\n",
+    "        ),\n",
+    "    )\n",
+    "    print(params.to_dict())\n",
+    "    parameter_sets.append(params)\n",
+    "    print(f\"Prepared scenario with max_samples={max_samples}\")\n",
+    "\n",
+    "# Run all scenarios in parallel (progress feedback is shown by default)\n",
+    "print(f\"Submitting {len(parameter_sets)} kriging tasks in parallel...\")\n",
+    "\n",
+    "results = await run(manager, parameter_sets)\n",
+    "\n",
+    "print(f\"\\nAll {len(results)} scenarios completed!\")"
    ],
+   "id": "906f9599397b15a4",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# Refresh the block model to see the new attributes added by kriging\n",
+    "block_model = await block_model.refresh()\n",
+    "\n",
+    "# Pretty-print the block model to see its current state\n",
+    "block_model"
+   ],
+   "id": "5a93dca60e185cd5",
    "outputs": [],
    "execution_count": null
   }
